Fixes proposal button firefox

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -3297,7 +3297,7 @@ span.where, .map .infowindow ul.details li.where {
 
   form {
     float:right;
-    margin: 0 0 0 10px;
+    margin: 0 0 0 8px;
   }
 }
 
